source/stylesheets/post.css
article h1,
article h2,
article h3 {
  font-family: 'Lato', 'sans-serif';
}

article h1 {
  line-height: 2.5rem;
}

article h2 {
  font-size: 1.4rem;
  font-weight: 600;
  margin-bottom: 0.5rem;
}

article h3 {
  font-size: 1rem;
  font-weight: 700;
  margin-bottom: 0.3rem;
}

article h4 {
  font-size: 1rem;
  font-weight: 500;
  margin-bottom: 0.3rem;
}

article figure figcaption {
  font-size: 0.8rem;
}

article hr {
  border-top: 0.5px solid #fff;
  margin: 2.5rem auto;
  width: 50%;
}

article aside {
  border: solid 1px gold;
  border-radius: 0.25rem;
  background: #ffa;
  color: var(--code-text-color);
  padding: 1rem;
  margin-right: 2em;
  margin-left: 2em;
}

@media (prefers-color-scheme: dark) {
  article code {
    color: rgb(0, 0, 0);
  }
}

article pre,
article code {
  line-height: 1.125rem;
  font-size: 0.9em;
}

article code {
  background: #eee;
  padding: 0.1rem 0.5rem;
  border-radius: 0.5rem;
  border: solid 1px #ddd;
  font-size: 0.85rem;
}

article a code {
  color: var(--base-color);
}

article pre code {
  display: block;
  overflow-x: scroll;

  // reset from other `article code` selector
  background: none;
  padding: 0;
  border-radius: 0;
  border: none;
  font-size: 1rem;
}

article pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #fff;
}

article pre.terminalcode {
  background-color: #333;
}

article li > ul,
article li > ol {
  margin-top: 0.5rem;
}

article ol,
article ul,
article p,
article figure,
article table,
article blockquote,
article aside,
article pre {
  margin-top: 0;
  margin-bottom: var(--paragraph-mb);
}

/* Using !important because twitter
  converts blockquote to iframe and
  applies inline CSS
*/
article iframe.twitter-tweet {
  margin-bottom: 20px !important;
}

article iframe.mastodon-embed {
  display: block;
  max-width: 100%;
  width: 80%;
  margin: 0 auto 1rem;
  border: 0;
  border-radius: 10px;
}

article blockquote {
  padding: 1rem 1.5rem 1rem;
  border-left: solid 4px var(--blue-1);
  background-color: var(--blue-2);
  color: var(--code-text-color);
  border-radius: 0 8px 8px 0;
  box-shadow: 3px 3px 0px aliceblue;
}

article blockquote p {
  line-height: var(--paragraph-mb);
  margin-bottom: 0.5rem;
}

article blockquote p:last-child {
  margin-bottom: 0;
}

article blockquote p code {
  font-size: 0.9em;
}


article img {
  margin: 0 auto 1rem;
  display: block;
  border: solid 1px var(--image-border-color);
  border-radius: 2%;
}

article img.book-cover {
  border-radius: 3%;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

article table tr:nth-child(odd) {
  background-color: #fafafa;
}

article table td,
article table th {
  padding: 5px 10px;
  white-space: nowrap;
}

article table {
  border-collapse: collapse;
  display: block;
  overflow-x: scroll;
}

article table tr {
  border: solid 1px #eee;
}

aside.webmentions h2 {
  margin: 1rem 0;
}

.wm-replies ul, .wm-likes ul {
  margin-left: 0
}

.wm-replies li {
  padding: 1rem;
  list-style: none;
  background: #fafafa;
  border-radius: 10px;
  border: solid 1px #eaeaea;
}

.wm-reply-author-photo {
  border-radius: 50%;
  border: solid 2px #fff;
  box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 50%);
}

.wm-reply-author {
  margin-right: auto;
}

.wm-hidden {
  display: none;
}

.wm-likes ul {
  display: inline;
}

